--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Hora do dia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="carregar()">
@@ -23,4 +23,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
